navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: media
spec:
  defaultBackend:
    service:
      name: navidrome
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - music
